--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "@mapbox/glyph-pbf-composite": "^0.0.3",
     "fontnik": "^0.7.0"
   },
+  "engines": {
+    "node": "<=16"
+  },
   "cpu": [
     "!arm64",
   ]
