--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,4 +24,10 @@ jobs:
         run: npm run release
 
       - name: Add file to release
-        run: gh release upload $TAG ./dist/fonts.tar.gz --clobber -R 'versatiles-org/versatiles-fonts'
+        uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ env.GH_TOKEN }}
+          file: dist/fonts.tar.gz
+          tag: ${{ env.TAG }}
+          overwrite: true
+          
