--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,8 +8,6 @@ jobs:
   release:
     name: Build and release
     runs-on: ubuntu-latest
-    env:
-      GH_TOKEN: ${{ github.token }}
     steps:
       - name: Get Repo
         uses: actions/checkout@v3
@@ -26,8 +24,9 @@ jobs:
       - name: Add file to release
         uses: svenstaro/upload-release-action@v2
         with:
-          repo_token: ${{ env.GH_TOKEN }}
-          file: dist/fonts.tar.gz
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: ./dist/fonts/fonts.tar.gz
           tag: ${{ env.TAG }}
           overwrite: true
-          
+
+#          run: gh release upload $TAG ./dist/fonts/fonts.tar.gz --clobber -R 'versatiles-org/versatiles-fonts'
