--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,8 +25,8 @@ jobs:
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: ./dist/fonts/fonts.tar.gz
+          file: dist/fonts.tar.gz
           tag: ${{ env.TAG }}
           overwrite: true
 
-#          run: gh release upload $TAG ./dist/fonts/fonts.tar.gz --clobber -R 'versatiles-org/versatiles-fonts'
+#          run: gh release upload $TAG dist/fonts.tar.gz --clobber -R 'versatiles-org/versatiles-fonts'
