try gh cli version

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,11 +22,12 @@ jobs:
         run: npm run release
 
       - name: Add file to release
-        uses: svenstaro/upload-release-action@v2
-        with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: dist/fonts.tar.gz
-          tag: ${{ env.TAG }}
-          overwrite: true
+        run: gh release upload $TAG dist/fonts.tar.gz --clobber
+        #uses: svenstaro/upload-release-action@v2
+        #with:
+        #  repo_token: ${{ secrets.GITHUB_TOKEN }}
+        #  file: dist/fonts.tar.gz
+        #  tag: ${{ env.TAG }}
+        #  overwrite: true
 
 #          run: gh release upload $TAG dist/fonts.tar.gz --clobber -R 'versatiles-org/versatiles-fonts'
