--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,3 +24,6 @@ jobs:
 
       - name: Add file to release
         run: gh release upload $RELEASE_TAG dist/fonts.tar.gz --clobber
+
+      - name: Update release
+        run: gh release edit $RELEASE_TAG --draft=false --latest --prerelease=false
