set minimum node version

--- a/package.json
+++ b/package.json
@@ -10,9 +10,6 @@
     "fontnik": "^0.7.0"
   },
   "engines": {
-    "node": "<=16"
-  },
-  "cpu": [
-    "!arm64",
-  ]
+    "node": ">=16"
+  }
 }
