--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "dependencies": {
     "@mapbox/glyph-pbf-composite": "^0.0.3",
-    "fontnik": "^0.7.0"
+    "fontnik": "^0.7.0",
+    "work-faster": "^0.1.0"
   },
   "engines": {
     "node": ">=16"
