trigger frontend release, cleanup workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,22 +14,21 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - run: 'echo "RELEASE_TAG=v$(jq -r ''.version'' package.json)" >> $GITHUB_ENV'
-        name: get version
+      - name: get version
+        run: 'echo "RELEASE_TAG=v$(jq -r ''.version'' package.json)" >> $GITHUB_ENV'
 
       - run: npm install
-
       - run: npm run build
-        name: build
-
       - run: npm run release
-        name: prepare release
 
-      - run: gh release create $RELEASE_TAG || true
-        name: create release if needed
+      - name: create release if needed
+        run: gh release view $RELEASE_TAG || gh release create $RELEASE_TAG
 
-      - run: gh release upload $RELEASE_TAG --clobber dist/*.tar.gz
-        name: add file to release
+      - name: upload files to release
+        run: gh release upload $RELEASE_TAG --clobber dist/*.tar.gz
 
-      - run: gh release edit $RELEASE_TAG --draft=false --latest --prerelease=false
-        name: update release
+      - name: update release
+        run: gh release edit $RELEASE_TAG --draft=false --latest --prerelease=false
+
+      - name: trigger frontend release
+        run: 'curl -XPOST -u "michaelkreil:${{secrets.PAT_TOKEN}}" -H "Accept: application/vnd.github.everest-preview+json" -H "Content-Type: application/json" https://api.github.com/repos/versatiles-org/versatiles-frontend/actions/workflows/release.yml/dispatches --data ''{"ref":"main"}'''
