--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "versatiles-fonts",
   "version": "1.0.0",
   "scripts": {
-    "build": "node bin/convert_fonts.js; bin/release.sh",
+    "build": "tsx src/build_fonts.ts",
     "release": "vrt release",
     "upgrade": "npm-check-updates -u && rm -f package-lock.json && rm -rf node_modules; npm i"
   },
@@ -12,14 +12,14 @@
     "fontnik": "^0.7.2",
     "tar-stream": "^3.1.7",
     "tsx": "^4.7.2",
-    "typescript": "^5.4.4",
-    "work-faster": "^0.3.4"
+    "typescript": "^5.4.4"
   },
   "engines": {
     "node": ">=16"
   },
   "devDependencies": {
     "@types/node": "^20.12.5",
+    "@types/tar-stream": "^3.1.3",
     "@versatiles/release-tool": "^1.2.3",
     "npm-check-updates": "^16.14.18"
   }
