build: add preliminary prepack

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "tsx src/build_fonts.ts",
     "check": "npm run test",
+    "prepack": "",
     "release": "vrt release-npm",
     "test": "echo 'in confidence we trust'",
     "upgrade": "npm-check-updates -u && rm -f package-lock.json && rm -rf node_modules; npm i"
