--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "tsx src/build_fonts.ts",
     "check": "npm run test",
+    "lint": "eslint --color .",
     "prepack": "",
     "release": "vrt release-npm",
     "test": "echo 'in confidence we trust'",
@@ -23,7 +24,10 @@
   "devDependencies": {
     "@types/node": "^20.12.5",
     "@types/tar-stream": "^3.1.3",
+    "@typescript-eslint/eslint-plugin": "^7.6.0",
+    "@typescript-eslint/parser": "^7.6.0",
     "@versatiles/release-tool": "^1.2.3",
+    "eslint": "^8.57.0",
     "npm-check-updates": "^16.14.18"
   }
 }
