--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,13 +39,13 @@ jobs:
       - name: Lint
         run: npm run lint
 
-#      - name: Run tests
-#        run: npm run test
-#
-#      - name: Generate test coverage
-#        run: npm run test-coverage
-#
-#      - name: Upload test coverage
-#        uses: codecov/codecov-action@v4
-#        env:
-#          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+      - name: Run tests
+        run: npm run test
+
+      - name: Generate test coverage
+        run: npm run test-coverage
+
+      - name: Upload test coverage
+        uses: codecov/codecov-action@v4
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
