--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "node": ">=16"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.12.5",
     "@types/tar-stream": "^3.1.3",
     "@typescript-eslint/eslint-plugin": "^7.6.0",
