--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^20.14.10",
     "@types/tar-stream": "^3.1.3",
-    "@typescript-eslint/eslint-plugin": "^7.16.0",
-    "@typescript-eslint/parser": "^7.16.0",
+    "@typescript-eslint/eslint-plugin": "^8.0.0-alpha",
+    "@typescript-eslint/parser": "^8.0.0-alpha",
     "@versatiles/release-tool": "^1.2.4",
     "eslint": "^9.7.0",
     "jest": "^29.7.0",
