--- a/package.json
+++ b/package.json
@@ -17,23 +17,23 @@
   "dependencies": {
     "fontnik": "^0.7.2",
     "tar-stream": "^3.1.7",
-    "tsx": "^4.16.2",
-    "typescript": "^5.5.3"
+    "tsx": "^4.19.0",
+    "typescript": "^5.5.4"
   },
   "engines": {
     "node": ">=16"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.14.10",
+    "@types/node": "^22.5.0",
     "@types/tar-stream": "^3.1.3",
-    "@typescript-eslint/eslint-plugin": "^8.0.0-alpha",
-    "@typescript-eslint/parser": "^8.0.0-alpha",
-    "@versatiles/release-tool": "^1.2.4",
-    "eslint": "^9.7.0",
+    "@typescript-eslint/eslint-plugin": "^8.3.0",
+    "@typescript-eslint/parser": "^8.3.0",
+    "@versatiles/release-tool": "^1.2.5",
+    "eslint": "^9.9.1",
     "jest": "^29.7.0",
-    "npm-check-updates": "^16.14.20",
-    "ts-jest": "^29.2.2",
+    "npm-check-updates": "^17.1.0",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2"
   }
 }
