--- a/package.json
+++ b/package.json
@@ -27,13 +27,12 @@
     "@types/jest": "^29.5.13",
     "@types/node": "^22.7.4",
     "@types/tar-stream": "^3.1.3",
-    "@typescript-eslint/eslint-plugin": "^8.8.0",
-    "@typescript-eslint/parser": "^8.8.0",
     "@versatiles/release-tool": "^1.2.6",
     "eslint": "^9.11.1",
     "jest": "^29.7.0",
     "npm-check-updates": "^17.1.3",
     "ts-jest": "^29.2.5",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "typescript-eslint": "^8.8.0"
   }
 }
