--- a/package.json
+++ b/package.json
@@ -4,30 +4,27 @@
   "private": true,
   "scripts": {
     "build": "tsx src/build_fonts.ts",
-    "check": "npm run lint; npm run test",
+    "check": "npm run lint && npm run test",
     "lint": "eslint --color .",
-    "prepack": "",
-    "release": "vrt release-npm",
     "test": "npm run test-typescript",
     "test-coverage": "NODE_OPTIONS=--experimental-vm-modules jest --coverage",
     "test-typescript": "NODE_OPTIONS=--experimental-vm-modules jest",
-    "upgrade": "npm-check-updates -u && rm -f package-lock.json && rm -rf node_modules; npm i"
+    "upgrade": "vrt deps-upgrade"
   },
   "type": "module",
   "dependencies": {
-    "fontnik": "^0.7.2",
     "tar-stream": "^3.1.7",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3"
   },
   "engines": {
-    "node": ">=16"
+    "node": ">=20"
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.0",
     "@types/tar-stream": "^3.1.3",
-    "@versatiles/release-tool": "^1.2.6",
+    "@versatiles/release-tool": "^2.3.0",
     "eslint": "^9.19.0",
     "jest": "^29.7.0",
     "npm-check-updates": "^17.1.14",
