ci: use latest release tag

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,7 +30,7 @@ jobs:
       # Extract Version from GitHub Tag and store the tag name (e.g. "v1.2.3") in RELEASE_TAG.
       - name: Get Version from GitHub Tag
         id: get_tag
-        run: echo "RELEASE_TAG=${GITHUB_REF##*/}" >> $GITHUB_ENV
+        run: echo "RELEASE_TAG=$(gh release list --limit 1 --json tagName -q '.[0].tagName')" >> $GITHUB_ENV
 
       # Upload files to the existing (pre)release
       - name: Upload files to release
