--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,5 +2,5 @@ version: 2
 updates:
   - package-ecosystem: github-actions
     directory: /
-    schedule: { interval: monthly }
+    schedule: { interval: weekly }
     groups: { github-action: { patterns: ['*'] } }
